--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -72,6 +72,11 @@ fieldset {
     padding: 0;
 }
 
+.giftreg {
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
 textarea {
     resize: vertical;
 }
