Center Align CSS

--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -662,6 +662,16 @@ section h2 {
     *zoom: 1;
 }
 
+.center {
+    text-align: center;
+}
+
+button {
+    align-items: center;
+    margin: 0 auto;
+    display: block;
+}
+
 /* ==========================================================================
    Print styles
    ========================================================================== */
