--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -86,6 +86,7 @@ fieldset {
 .giftreg {
     padding-top: 6px;
     padding-bottom: 6px;
+    
 }
 
 textarea {
@@ -354,6 +355,12 @@ section h2 {
     padding: 0 0px;
     font-family:"futura_ltbook",Arial,sans-serif;
     letter-spacing: 1px
+}
+
+section h3 {
+    font-family: "EdwardianScrAltITCTT", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 2.25em;
+    letter-spacing: 1px;
 }
 
 .column {
