--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -86,7 +86,10 @@ fieldset {
 .giftreg {
     padding-top: 6px;
     padding-bottom: 6px;
-    
+    padding-left: 6px;
+    padding-right: 6px;
+    margin: 2px 2px 2px 2px;
+    float: left;    
 }
 
 textarea {
@@ -281,7 +284,7 @@ nav ul li a::-moz-focus-inner {border:0;}
 }
 
 /* ==========================================================================
-   Brad's custom styles
+   Custom styles
    ========================================================================== */
 * { margin: 0; padding: 0; }
 html {
@@ -323,7 +326,7 @@ section {
     padding: 25px;
     background-color: black;
     height: 100%;
-    margin-top: 200px;
+    margin-top: 150px;
     color: white;
 
     -ms-border-radius: 8px;
@@ -399,7 +402,7 @@ section h3 {
 
     .header-container.sticky {
         position: fixed;
-        top: 15px;
+        top: 20px;
         
         animation:thedrop 1s 1;
         -moz-animation:thedrop 1s 1;
@@ -471,18 +474,19 @@ section h3 {
     }
 
     section {
-        padding: 40px 40px 70px 40px;
+        padding: 15px 10px 20px 30px;
     }
     section h1 {
         font-size: 3.1em;
     }
+    
     section h2 {
-        font-size: 1.7em;
+        font-size: 1.5em;
     }
 
 
     .column p {
-        font-size: 1.1em;
+        font-size: .75em;
     }
 
     #gmap iframe {
@@ -510,7 +514,7 @@ section h3 {
    ==================== */
 
     section h1 {
-        font-size: 4.9em;
+        font-size: 3em;
     }
     section h2 {
         font-size: 2.0em;
@@ -889,16 +893,16 @@ div.bp .column p {
 }
 
 .hr-t {
-    margin: 80px auto 0 auto;
-    width: 97%;
-    border-top:#1e1e1e solid 1px;
+    margin: 10px auto 0 auto;
+    width: 85%;
+    border-top:#808080 solid 1px;
     opacity:0.4;
     filter:alpha(opacity=40); /* For IE8 and earlier */
 }
 
 .hr-b {
-    margin: 0 auto 80px auto;
-    width: 97%;
+    margin: 0 auto 40px auto;
+    width: 85%;
     border-bottom:#808080 solid 1px;
     opacity:0.4;
     filter:alpha(opacity=40); /* For IE8 and earlier */
